cluster/booksearch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksearch-deployment
spec:
  selector:
    matchLabels:
      app: pdf-app
  replicas: 1
  template:
    metadata:
      labels:
        app: pdf-app
    spec:
      hostname: booksearch
      imagePullSecrets:
      - name: blinnc-docker
      hostAliases:
      - ip: "192.168.0.102"
        hostnames:
        - "ubuntu"
      containers:
      - name: booksearch-container
        image: blinnc/search:next
        ports:
        - name: bs-port
          containerPort: 9000
        readinessProbe:
          httpGet:
            path: /
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
