cluster/jupyter.yml
# docker run -d --name jupyter --gpus=all -p 8888:8888 -v C:/Users/Blinn/Documents/rust/search_project/pdf_processor:/home/jovyan jupyter/base-notebook:latest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-deployment
spec:
  selector:
    matchLabels:
      app: pdf-app
  replicas: 1
  template:
    metadata:
      labels:
        app: pdf-app
    spec:
      hostname: jupyter
      containers:
      - name: jupyter
        image: jupyter/base-notebook:latest
        ports:
        - name: jupyter-port
          containerPort: 8888
        volumeMounts:
        - name: jupyter-notebooks
          mountPath: /home/jovyan
          readOnly: false
      volumes:
      - name: jupyter-notebooks
        hostPath:
          path: /run/desktop/mnt/host/c/Users/Blinn/Documents/rust/search_project/pdf_processor
