cluster/pulsar.yml
#pulsar-client consume public/default/search_log -s test -n 0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar
spec:
  selector:
    matchLabels:
      app: pdf-app
  replicas: 1
  template:
    metadata:
      labels:
        app: pdf-app
    spec:
      hostname: pulsar
      containers:
      - name: pulsar
        image: apachepulsar/pulsar:4.0.6
        command:
        - bin/pulsar
        - standalone
        ports:
        - name: pul-http-port
          containerPort: 8080
        - name: pulsar-port
          containerPort: 6650
        readinessProbe:
          exec:
            command:
            - bin/pulsar-admin 
            - brokers
            - healthcheck
          periodSeconds: 60
          initialDelaySeconds: 30
          timeoutSeconds: 20
          failureThreshold: 3
