cluster/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
spec:
  selector:
    app: pdf-app
  ports:
  #- name: ollama
  #  protocol: "TCP"
  #  port: 11434
  #  targetPort: ollama-port
  - name: pgvector
    protocol: "TCP"
    port: 5432
    targetPort: pgvector-port
  - name: jupyter
    protocol: "TCP"
    port: 8888
    targetPort: jupyter-port
  - name: react
    protocol: "TCP"
    port: 8080
    targetPort: react-bolt
  #- name: booksearch
  #  protocol: "TCP"
  #  port: 8000
  #  targetPort: bs-port
  type: LoadBalancer
